Correct veritcal alignment on Img fallback

--- a/generators/app/templates/src/components/Img/styles.module.css
+++ b/generators/app/templates/src/components/Img/styles.module.css
@@ -1,4 +1,5 @@
 .fallbackImg {
+  vertical-align: middle;
   width: 100%;
   &[data-cover='true'] {
     object-fit: cover;
